# minivox

./: .gitmodules  CMakeLists.txt  README.md
shaders/: CMakeLists.txt  varying.def.sc
src/: graphics.cc  graphics.h  main.cc  window.cc  window.h
src/gfx/: buffer.h  indexbuffer.cc  indexbuffer.h  program.cc  program.h  shader.cc  shader.h  vertexbuffer.h
src/util/: camera.cc  camera.h  debug.cc  debug.h  timing.cc  timing.h  window.cc  window.h
src/world/: chunk.cc  chunk.h  coords.h  mesh.cc  mesh.h  voxel.h  world.cc  world.h
